setup/openserverless/streamer/streamer-template.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openserverless-streamer-api
  namespace: openserverless
  labels:
    app: openserverless-streamer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openserverless-streamer-api
  template:
    metadata:
      labels:
        name: openserverless-streamer-api
        app: openserverless-streamer-api
    spec:
      serviceAccount: default
      containers:
        - name: openserverless-streamer-api
          image: ${IMAGES_STREAMER}
          imagePullPolicy: IfNotPresent
          command: ["/streamer"]
          ports:
            - containerPort: 8080
              name: streamer
---
apiVersion: v1
kind: Service
metadata:
  name: openserverless-streamer-api
  namespace: openserverless
spec:
  ports:
    - name: streamer
      port: 8080
  selector:
    app: openserverless-streamer-api
