setup/openserverless/streamer/nginx-template.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 48m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

$T    cert-manager.io/cluster-issuer: letsencrypt-prod
$T    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

  name: openserverless-streamer-api-ingress
  namespace: openserverless

spec:
  ingressClassName: nginx

$T  tls:
$T  - hosts:
$T      - stream.${STREAMER_API_HOSTNAME:-localhost}
$T    secretName: streamer-api-tls

  rules:
  - host: stream.${STREAMER_API_HOSTNAME:-localhost}    
    http:
      paths:
      - backend:
          service:
            name: openserverless-streamer-api
            port:
              number: 8080
        path: /
        pathType: Prefix
